--- a/paraflow-commons/pom.xml
+++ b/paraflow-commons/pom.xml
@@ -46,6 +46,16 @@
             <artifactId>simpleclient_pushgateway</artifactId>
         </dependency>
 
+        <!-- hdfs -->
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
